@@ -1,6 +1,6 @@
 [buildout]
 develop = .
-parts = eggdeps test
+parts = eggdeps test sphinx sphinx-autogen
 
 [eggdeps]
 recipe = zc.recipe.egg
@@ -17,3 +17,19 @@ eggs = tl.eggdeps
 recipe = zc.recipe.testrunner
 eggs = tl.eggdeps [test]
 defaults = ["-v", "-c", "-s", "tl"]
+
+[sphinx]
+recipe = zc.recipe.egg
+eggs = sphinx
+       pkginfo
+       tl.eggdeps
+scripts = sphinx-build
+arguments = argv=sys.argv+("-E -c doc/ -d build/sphinx/doctrees"
+                           " . build/sphinx/html/").split()
+
+[sphinx-autogen]
+recipe = zc.recipe.egg
+eggs = sphinx
+       tl.eggdeps
+scripts = sphinx-autogen
+arguments = argv=sys.argv+"-o doc/ -s .txt doc/modules.txt".split()
