@@ -1,0 +1,21 @@
+.. include:: ../ABOUT.txt
+
+
+====
+
+
+.. toctree::
+
+    ../CHANGES.txt
+
+
+====
+
+
+.. literalinclude:: ../COPYRIGHT.txt
+.. literalinclude:: ../LICENSE.txt
+
+
+.. Local Variables:
+.. mode: rst
+.. End:
